Assignment #1 update screenshots

--- a/a1/run_py_files_in_jupyter_lab.ipynb
+++ b/a1/run_py_files_in_jupyter_lab.ipynb
@@ -80,7 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load test.py"
+    "# %load test.py\n",
+    "print('Hello My World!')\n"
    ]
   },
   {
@@ -115,7 +116,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "63d7cebb-cc81-4b1d-94a8-8c95f15ec403",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# ! (bang) operator accesses the underlying shell\n",
