--- a/a1/magic_commands.ipynb
+++ b/a1/magic_commands.ipynb
@@ -12,7 +12,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d58d880f-3974-4301-a046-dca803262700",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# https://www.aboutdatalog.com/post/top-8-magic-commands-in-jupyter-notebook\n",
@@ -26,7 +30,11 @@
   {
    "cell_type": "markdown",
    "id": "d84c5166-80c1-4315-9f73-a85ddad2fd51",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## 1. List all magic commands: %lsmagic"
    ]
