Assignment #2 initial release

--- a/a1/paycheck_calculator.ipynb
+++ b/a1/paycheck_calculator.ipynb
@@ -34,10 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ee1e8a1b-f53c-43ad-9692-dff6a2260a1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "User Input:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Hours Worked:  40\n",
+      "Hourly Rate: $ 25\n",
+      "Tax Rate (percent):  12\n"
+     ]
+    }
+   ],
    "source": [
     "# IPO:\n",
     "# input:\n",
@@ -49,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "78275dc0-8828-4789-b4fc-ededf2a3cdee",
    "metadata": {},
    "outputs": [],
@@ -62,10 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2129de71-2103-45c7-8896-832ab3eb973f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Program Output:\n",
+      "Gross Pay:\t $1,000.00\n",
+      "Tax Rate:\t 12.00%\n",
+      "Tax Amount:\t $120.00\n",
+      "Net Pay:\t $880.00\n"
+     ]
+    }
+   ],
    "source": [
     "# output:\n",
     "# display results\n",
