--- a/a1/run_py_files_in_jupyter_lab.ipynb
+++ b/a1/run_py_files_in_jupyter_lab.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5646d7b-2a96-464e-a3ad-d39907d7317e",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "524bf909-4f24-47dd-9cf9-04b4cddd06d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello My World!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. %run (runs script as if executing from command line)\n",
     "# Create test.py file that prints Hellow World!, in same directory as this notebook\n",
@@ -40,10 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e96cf53-f4f2-4dd2-8644-0cfe67b4411a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello My World!\n",
+      "Hello My World!\n",
+      "Hello My World!\n",
+      "\n",
+      "IPython CPU timings (estimated):\n",
+      "Total runs performed: 3\n",
+      "  Times  :      Total      Per run\n",
+      "  User   :       0.02 s,       0.01 s.\n",
+      "  System :       0.00 s,       0.00 s.\n",
+      "Wall time:       0.01 s.\n"
+     ]
+    }
+   ],
    "source": [
     "# Note: Can also print timing -t, and run multiple times -N<N>\n",
     "# https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-run\n",
@@ -52,10 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6fe00ed2-e649-4d3e-bf94-f6b93726ebf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello My World!\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. import:\n",
     "# combines two operations: searches for named module, then binds results of search to name in local scope\n",
@@ -65,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e351ab3e-3e94-40a1-a1c9-d013b12c3558",
    "metadata": {},
    "outputs": [],
@@ -75,10 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c0938161-4d54-4745-909d-507e783443c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello My World!\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test.py\n",
     "print('Hello My World!')\n"
@@ -102,10 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "851b7b17-8e71-4f3d-b00a-66c416a85e9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile test.py\n",
     "# %Load test.py\n",
@@ -114,12 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "63d7cebb-cc81-4b1d-94a8-8c95f15ec403",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'emacs' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "# ! (bang) operator accesses the underlying shell\n",
     "# Here, it calls emacs that is installed in the underlying shell\n",
