--- a/a2/a2.ipynb
+++ b/a2/a2.ipynb
@@ -14,14 +14,14 @@
    "metadata": {},
    "source": [
     "#### **Developer:** Mark Trombly\n",
-    "#### **Course:** Exploration into AI, Machine and Deep Learning\n",
+    "#### **Course:** Artifical Intelligence Applications\n",
     "#### **Program Requirements (data analysis and visualization steps):**\n",
     "~~~\n",
     "1. Get\n",
     "2. Clean\n",
     "3. Prepare\n",
     "4. Analyze\n",
-    "5. Display/Visualize (preparation\n",
+    "5. Display/Visualize (preparation)\n",
     "~~~\n",
     "#### **Note:** In each of the following examples. **BE SURE** to research the functions/properties/options indicated."
    ]
@@ -31,10 +31,23 @@
    "execution_count": 1,
    "id": "da935c99-315a-4be0-907b-8dc3bf90459c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.21 (main, Dec 11 2024, 16:35:24) [MSC v.1929 64 bit (AMD64)]\n",
+      "testenv\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. import pandas (open source data analysis/science an AI package)\n",
-    "import pandas as pd"
+    "# 1. import necessary modules\n",
+    "import sys\n",
+    "import os\n",
+    "import pandas as pd # (open source data analysis/science and AI package)\n",
+    "print(sys.version) # print python version\n",
+    "print (os.environ['CONDA_DEFAULT_ENV']) # print conda environment"
    ]
   },
   {
@@ -1154,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "8bc6d932-f02c-444c-a34a-51d9d6b56722",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1227,7 @@
        "10  1910  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "4c0f5f78-1693-4ae6-8f3e-43a66c41350c",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1358,7 @@
        "10  1910  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "26f75ef5-35f1-420f-b1b5-480425a6f68e",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1430,7 @@
        "6  1906  1-4 Years     1580.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "8704fdd1-e9a5-4e2b-940c-befabf87ffbf",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1517,7 @@
        "20  1920  1-4 Years      987.2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "34c20924-4ee6-47d6-ab86-dafbce892a3e",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1596,7 @@
        "374  1917  15-19 Years      380.3"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "d4dd275e-e214-4a47-ad3b-be2fc39fa909",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1723,7 @@
        "[476 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "b9dfa327-4ece-45e6-8cdb-3d7d9c414b99",
    "metadata": {},
    "outputs": [
@@ -1787,7 +1800,7 @@
        "10  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "id": "65b84509-e23d-4f91-9367-0fef9370734d",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1869,7 @@
        "6  1-4 Years     1580.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "3c633ddc-d325-40fa-88a7-567adec8a89b",
    "metadata": {},
    "outputs": [
@@ -1936,7 +1949,7 @@
        "10  1910  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "8f9046ae-ad9b-4984-8d05-7ee0dc47d6c3",
    "metadata": {},
    "outputs": [
@@ -2066,7 +2079,7 @@
        "10  1910  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "id": "99399b03-bf96-4405-92af-b82c8e05bd1b",
    "metadata": {},
    "outputs": [
@@ -2131,7 +2144,7 @@
        "5  1905  1-4 Years     1498.9"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2144,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "id": "cf4ca1bd-9dc4-4e99-b9e4-1d92ce52bba0",
    "metadata": {},
    "outputs": [
@@ -2211,7 +2224,7 @@
        "15  1915  1-4 Years      924.2"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "id": "497ea933-2575-4ce4-a86c-8ccd521f81c6",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2300,7 @@
        "10  1-4 Years     1397.3"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2299,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "id": "9d2bf69e-7a08-4668-ba6a-f6e0d5a0b366",
    "metadata": {},
    "outputs": [
@@ -2355,7 +2368,7 @@
        "6  1-4 Years     1580.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "id": "bf893221-b290-4704-89fc-42c661a9ce49",
    "metadata": {},
    "outputs": [
@@ -2476,7 +2489,7 @@
        "475  2018  15-19 Years       49.2"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2511,7 +2524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
