--- a/a3/a3.ipynb
+++ b/a3/a3.ipynb
@@ -1745,7 +1745,7 @@
    "id": "9030ead7-6db2-4b7a-addf-e85da3193b75",
    "metadata": {},
    "source": [
-    "## Analyze grouped data using (single aggregate functions"
+    "## Analyze grouped data using (single aggregate) functions"
    ]
   },
   {
@@ -2237,6 +2237,14 @@
    "source": [
     "# 44. group 'AgeGroup', then return statistical summary for 'DeathRate' using 'describe()' fuction\n",
     "mortality_data.groupby('AgeGroup')['DeathRate'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7fb0089-b003-4bd8-821c-b492afd82b9b",
+   "metadata": {},
+   "source": [
+    "## Analyze grouped data using (multiple) aggregate functions"
    ]
   },
   {
@@ -2826,7 +2834,7 @@
    "source": [
     "## Outlilers\n",
     "\n",
-    "* Defined: \"unusual\" dataset values\n",
+    "* Defined: \"Unusual\" dataset values\n",
     "* Problematic: Distort findings\n",
     "* Identifying outliers (simple):\n",
     "  1. Sort data\n",
