--- a/skillsets/s14_python_image_processing/s14_image_processing_.ipynb
+++ b/skillsets/s14_python_image_processing/s14_image_processing_.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "# OpenCV: Open-source library for computer vision, machine learning, and image processing. (https://opencv.org/)\n",
     "# Note: All OpenCV array structures are converted to and from Numpy arrays.\n",
-    "# Numpy interation facilitates use with other libraries that use Numpy, like SciPy, Matplotlib, and scikit-Learn (aka \"sklearn\").\n"
+    "# Numpy interation facilitates use with other libraries that use Numpy, like SciPy, Matplotlib, and scikit-Learn (aka \"sklearn\")."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "id": "de4b9b4b-b64c-4217-8128-84dbd0281341",
    "metadata": {},
    "source": [
-    "# Basic OPenCV Commands:\n",
+    "# Basic OpenCV Commands:\n",
     "\n",
     "1. Read image from file **(imread)**\n",
     "2. Display image in OpenCV window **(imshow)**\n",
@@ -76,7 +76,7 @@
    "id": "8a9c5b58-cd8b-4d53-9efd-78d09f6b6a44",
    "metadata": {},
    "source": [
-    "# Get image -imread()"
+    "# Get image - imread()"
    ]
   },
   {
@@ -407,7 +407,7 @@
    "id": "f4fa8d74-2992-48d5-b983-c7b5ddf18b5b",
    "metadata": {},
    "source": [
-    "# Display image -imshow()"
+    "# Display image - imshow()"
    ]
   },
   {
