Assignment #5 update a5.ipynb

--- a/skillsets/s13_algorithms/s13_algorithms.ipynb
+++ b/skillsets/s13_algorithms/s13_algorithms.ipynb
@@ -13,12 +13,18 @@
    "id": "f8a6feee-cb3f-43cd-b6c0-2217c73ecd0b",
    "metadata": {},
    "source": [
-    "Qualitative (Categorical) Date:\n",
+    "**Developer:** Mark Trombly\n",
+    "\n",
+    "**Course:** Exploration into AI, Machine and Deep Learning\n",
+    "\n",
+    "**Semester:** Summer 2025\n",
+    "\n",
+    "## Qualitative (Categorical) Data:\n",
     "\n",
     "- Characteristics/qualities cannot be measured numerically\n",
     "- Examples: gender, hair color, marital status, vehicle type\n",
     "\n",
-    "Subtypes:\n",
+    "### Subtypes:\n",
     "\n",
     "1. **Nominal Data:** Categories with no order or ranking\n",
     "\n",
@@ -27,14 +33,14 @@
     "   \n",
     "2. **Ordinal Data:** Categories with order or ranking: differences between ranks may not be equal or quantifiable\n",
     "\n",
-    "   **Examples:** *education level (high school, bachelor's, master's), customer satisfaction (very dissatisfied, dissatisfied, neutral, satisfied, very satisfied), or ncome level (low, middle, high)*\n",
+    "   **Examples:** *education level (high school, bachelor's, master's), customer satisfaction (very dissatisfied, dissatisfied, neutral, satisfied, very satisfied), or income level (low, middle, high)*\n",
     "\n",
-    "Quantitative (numerical Data:\n",
+    "## Quantitative (numerical Data:\n",
     "\n",
     "- Quantities or measurements expressed in numbers, also can perform mathematical operations\n",
     "- Examples: *height, weight, age, test scores, income*\n",
     "\n",
-    "Subtypes:\n",
+    "### Subtypes:\n",
     "\n",
     "1. **Discrete Data:** Numerical data, can be counted\n",
     "\n",
@@ -79,6 +85,7 @@
     "majorcards: Number of major credit cards held\n",
     "active: Number of active credit accounts\n",
     "\"\"\"\n",
+    "\n",
     "# import necessary packages\n",
     "import sys\n",
     "import os\n",
@@ -524,7 +531,7 @@
     }
    ],
    "source": [
-    "# binary encoding: change categorical variables \"yes\" and \"no\" into numerical format (thruough, still objects!)\n",
+    "# binary encoding: change categorical variables \"yes\" and \"no\" into numerical format (through, still objects!)\n",
     "# Note: values replaced in original DataFrame--NOT .csv file!\n",
     "with pd.option_context('future.no_silent_downcasting', True):\n",
     "    df['card'] = df['card'].replace(['yes', 'no'], [1,0])\n",
@@ -571,7 +578,7 @@
     "df.isna().sum()\n",
     "\n",
     "# Note: df.isnull().sum() functionally identical to df.isna().sum()\n",
-    "# Stictly matte rof preference. Though, isna() aligns with other Pandas functions like dropna() and fillna()"
+    "# Stictly matter of preference. Though, isna() aligns with other Pandas functions like dropna() and fillna()"
    ]
   },
   {
@@ -787,13 +794,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert Series with object dtype 9e.g., strings repesenting numbers 0,1) to Serices with integer dtpe\n",
+    "# convert Series with object dtype e.g., strings repesenting numbers 0,1) to Serices with integer dtype\n",
     "# Note: errors='coerce' turns unconvertible values into NaN\n",
     "df['card'] = pd.to_numeric(df['card'], errors='coerce')\n",
     "df['owner'] = pd.to_numeric(df['owner'], errors='coerce')\n",
     "df['selfemp'] = pd.to_numeric(df['selfemp'], errors='coerce')\n",
     "\n",
-    "# Note: only use astpe(numeric type) if confident ALL values in clolumn can be converted to numeric type!\n",
+    "# Note: only use astpe(numeric type) if confident ALL values in column can be converted to numeric type!\n",
     "# y = y.astype(int)"
    ]
   },
@@ -1140,7 +1147,7 @@
     }
    ],
    "source": [
-    "# Visually display correlations using Seaborn's heatmap() funciton.\n",
+    "# Visually display correlations using Seaborn's heatmap() function.\n",
     "# https://seaborn.pydata.org/generated/seaborn.heatmap.html\n",
     "\n",
     "plt.figure(figsize=(12, 10)) # set figure size (default: 6.4\" W X 4.8 \" H)\n",
@@ -1154,7 +1161,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "# Note: \"anot\" property set to \"True\" so that r-values are displayed in each cell.\n",
+    "# Note: \"annot\" property set to \"True\" so that r-values are displayed in each cell.\n",
     "# Here, display color bar, To turn off: cbar=False (default True)."
    ]
   },
@@ -1189,10 +1196,10 @@
    ],
    "source": [
     "# Note: Target: \"card\" (i.e., credit card application accepted)\n",
-    "# 'card' (0,1): nominal categorical variable (cagegorical: grouped into categories; nominal: no order or ranking)\n",
+    "# 'card' (0,1): nominal categorical variable (categorical: grouped into categories; nominal: no order or ranking)\n",
     "\n",
     "# display correlation of features against \"card\"\n",
-    "# Note: no gigh correlations of *individual* features with \"card\"\n",
+    "# Note: no high correlations of *individual* features with \"card\"\n",
     "\n",
     "corr = df.corr()\n",
     "corr['card'].sort_values(ascending=True)"
@@ -1706,13 +1713,13 @@
     "# split data into training and testing (validation) sets\n",
     "# Note: random_state is pseudo-random number parameter to reproduce same train test split each time code runs\n",
     "# Note: specific integer value doesn't matter; what matters is that same integer value is used to achieve reproducible results\n",
-    "# Note: Only test_size OR train_size need to be included, both NOT required. If neither, default 75% training/ 25% testing\n",
+    "# Note: Only test_size OR train_size need to be included, both NOT required. If neither, default 75% training/25% testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, test_size=0.2, random_state=42)\n",
     "\n",
     "# Trivia: If random_state value doesn't matter, why always 42?!\n",
     "\n",
     "# Answer(s):\n",
-    "# https://grsahagian.medium.com/what-is-random-state-42\n",
+    "# https://grsahagian.medium.com/what-is-random-state-42-d803402ee76b\n",
     "# https://en.wikipedia.org/wiki/42_(number)"
    ]
   },
@@ -1825,7 +1832,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with 10 decision-trees: 0.97\n"
+      "Model accuracy score with 100 decision-trees: 0.97\n"
      ]
     }
    ],
@@ -1835,20 +1842,66 @@
     "\n",
     "# evaluate model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print('Model accuracy score with 10 decision-trees: {0:0.2f}'. format(accuracy))\n",
+    "print('Model accuracy score with 100 decision-trees: {0:0.2f}'. format(accuracy))\n",
     "\n",
     "# Or, using f-string format\n",
-    "# print(f'Accuracy: {accuracy:.2f}')\n",
+    "# print(f\"Accuracy: {accuracy:.2f}\")\n",
     "\n",
     "# Note: In classification analysis, dependent attribute is categorical.\n",
     "# Common classification example: determine if email is spam (i.e., \"yes\"/\"no\" or 1/0)\n",
-    "\n"
+    "\n",
+    "# Some Random Forest Use Cases:\n",
+    "# Detects reliable debtors and potential fraudsters in finance\n",
+    "# Verifies medicine components in patient data in healthcare\n",
+    "# Gauges wheter customers will like products in e-commerce\n",
+    "\n",
+    "# BE SURE TO REVIEW THIS...\n",
+    "# https://www.kaggle.com/code/mozammalhaquetonoy/intermediate-machine-learning#Data-Leakage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dc5cf179-e95f-4913-b887-30d26ed99800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # FULL MODEL WITH ACCURACY ASSESMENT (NO VISUALIZATION)!\n",
+    "# # create (instantiate) Random Forest Classifier\n",
+    "# # Note: For testing purposes, initially use 10 decision-trees to build model.\n",
+    "# # Then, test with 100 decision-trees.\n",
+    "# # Does accuracy increase or decrease with number of decision-trees in model?\n",
+    "# model = RandomForestClassifier(n_estimators=10, random_state=42) # set hyperparameters\n",
+    "\n",
+    "# # train model\n",
+    "# model.fit(X_train, y_train)\n",
+    "\n",
+    "# # predictinos on test set\n",
+    "# y_pred = model.predict(X_test)\n",
+    "\n",
+    "# # evaluate model\n",
+    "# accuracy = accuracy_score(y_test, y_pred)\n",
+    "# print('Model accuracy score with 10 decsion-trees: {0:0.2f}'.format(accuracy))\n",
+    "\n",
+    "# # Or, using f-string format\n",
+    "# # print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "\n",
+    "# # Note: In classification analysis, dependent attribute is categorical.\n",
+    "# # Common classification example: determine if email is spam (i.e., \"yes\" / \"no\" or 1/0)\n",
+    "\n",
+    "# # Some Random Forest Use Cases:\n",
+    "# # Detects reliable debtors and potential fraudsters in finance\n",
+    "# # Verifies medicine components in patient data in healthcare\n",
+    "# # Gauges wheter customers will like products in e-commerce\n",
+    "\n",
+    "# # BE SURE TO REVIEW THIS...\n",
+    "# # https://www.kaggle.com/code/mozammalhaquetonoy/intermediate-machine-learning#Data-Leakage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc5cf179-e95f-4913-b887-30d26ed99800",
+   "id": "3f608617-2a5f-4d8d-991e-e44264afe7c4",
    "metadata": {},
    "outputs": [],
    "source": []
