--- a/skillsets/s14_python_image_processing/s14_image_processing.ipynb
+++ b/skillsets/s14_python_image_processing/s14_image_processing.ipynb
@@ -239,7 +239,7 @@
     "# print(flags)\n",
     "\n",
     "# Note: HSV: hue range is [0,179], saturation range is [0,255], and value range is [0,255].\n",
-    "# Different software use different scales. When comparing OpenCV values with other software vales, need to normalize these ranges!"
+    "# Different software use different scales. When comparing OpenCV values with other software values, need to normalize these ranges!"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "# Shrinking image: Use INTER_AREA interpolation\n",
     "# Note: Cubic interpolation: Computationally more complex, that is, slower than linear interpolation.\n",
     "# However, quality of resulting image will be higer.\n",
-    "# https://docs.opencv.org/3.4/da/d54/group__imgproc__transform.html#go47a974\n",
+    "# https://docs.opencv.org/3.4/da/d54/group__imgproc__transform.html#ga47a974309e9102f5f08231edc7e7529d\n",
     "\n",
     "resized = cv2.resize(myimg, (128, 128), interpolation = cv2.INTER_AREA) # Here, shrinking image.\n",
     "mynewimg = cv2.cvtColor(resized, cv2.COLOR_BGR2GRAY) # Returns Numpy array (2-dimensional array)!"
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "# Note: Binary images and grayscal images are 2-dimensional arrays!\n",
+    "# Note: Binary images and grayscale images are 2-dimensional arrays!\n",
     "# 1st dim = rows (height); 2nd dim cols (width)\n",
     "\n",
     "print(mynewimg.shape) # Here, both rows and cols have 128 elements\n",
@@ -365,8 +365,8 @@
     "\n",
     "print(type(mynewimg.shape)) # However, when used with shape attribute, returns tuple of dimensions (2)\n",
     "\n",
-    "# Here: height =128; width = 128 (since it is grayscale there is *no* 3rd dimension!)\n",
-    "# In a \"true-color\" image, 2rd dimensionis a color plane, such as RGB (Red, Green, Blue), or HSV, or CMYK."
+    "# Here: height = 128; width = 128 (since it is grayscale there is *no* 3rd dimension!)\n",
+    "# In a \"true-color\" image, 2rd dimension is a color plane, such as RGB (Red, Green, Blue), or HSV, or CMYK."
    ]
   },
   {
